// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blockchain should accept custom logger 1`] = `
Array [
  Array [
    Object {
      "parameters": Object {
        "callback": "https://example.com?signature=4b506b7c3a37df75af9ac0a54e810ce3397fbe2255d9d820c041f9bec3a3516cfc39bce02570dfed230d81f5f37f0ba5bf886275c69d1e8b31399df45a250dd2",
        "key": "xxx",
        "xpub": "yyy",
      },
      "url": "https://api.blockchain.info/v2/receive?xpub=yyy&callback=https%3A%2F%2Fexample.com%3Fsignature%3D4b506b7c3a37df75af9ac0a54e810ce3397fbe2255d9d820c041f9bec3a3516cfc39bce02570dfed230d81f5f37f0ba5bf886275c69d1e8b31399df45a250dd2&key=xxx",
    },
    "generating receiving address",
  ],
]
`;

exports[`Blockchain should create a new invoice with receiving address 1`] = `
Object {
  "address": "2FupTEd3PDF7HVxNrzNqQGGoWZA4rqiphq",
  "createdDate": 2018-04-19T13:48:05.316Z,
  "dueAmount": 1,
  "message": "Test invoice",
  "paymentState": "PENDING",
  "stateTransitions": Array [],
  "transactions": Array [],
  "updatedDate": 2018-04-20T13:48:05.316Z,
}
`;

exports[`Blockchain should generate a new receiving address 1`] = `
Object {
  "address": "2FupTEd3PDF7HVxNrzNqQGGoWZA4rqiphq",
  "callback": "https://example.com",
  "index": 0,
}
`;

exports[`Blockchain should throw error when generating receving address and getting a non 2xx response 1`] = `[Error: Request failed with status code 400]`;

exports[`Invoice should accept valid payment state updates 1`] = `"Invalid state transition from \\"WAITING_FOR_CONFIRMATION\\" to \\"PENDING\\""`;

exports[`Invoice should enable serialization and de-serialization 1`] = `
Object {
  "address": "2FupTEd3PDF7HVxNrzNqQGGoWZA4rqiphq",
  "createdDate": 2018-04-19T13:48:05.316Z,
  "dueAmount": 1,
  "message": "Test",
  "paymentState": "PENDING",
  "stateTransitions": Array [],
  "transactions": Array [],
  "updatedDate": 2018-04-20T13:48:05.316Z,
}
`;

exports[`Invoice should enable serialization and de-serialization 2`] = `
Object {
  "address": "2FupTEd3PDF7HVxNrzNqQGGoWZA4rqiphq",
  "createdDate": 2018-04-19T13:48:05.316Z,
  "dueAmount": 1,
  "message": "Test",
  "paymentState": "PENDING",
  "stateTransitions": Array [],
  "transactions": Array [],
  "updatedDate": 2018-04-20T13:48:05.316Z,
}
`;

exports[`Invoice should handle registering a new transaction and update existing transactions 1`] = `
Object {
  "address": "2FupTEd3PDF7HVxNrzNqQGGoWZA4rqiphq",
  "createdDate": 2018-04-19T13:48:05.316Z,
  "dueAmount": 1,
  "message": "Test",
  "paymentState": "PENDING",
  "stateTransitions": Array [],
  "transactions": Array [
    Object {
      "amount": 1,
      "confirmations": 1,
      "createdDate": 2018-04-19T13:48:05.316Z,
      "hash": "xxx",
      "updatedDate": 2018-04-20T13:48:05.316Z,
    },
    Object {
      "amount": 1,
      "confirmations": 0,
      "createdDate": 2018-04-19T13:48:05.316Z,
      "hash": "yyy",
      "updatedDate": 2018-04-20T13:48:05.316Z,
    },
  ],
  "updatedDate": 2018-04-20T13:48:05.316Z,
}
`;

exports[`Invoice should return valid signature 1`] = `"c74e85fc0d8204ce05decd6ae602976f8e2cf8dcd6d07652f20584baffa557e921393fd9ad559ff6f4d9439963af80f83151535431f3946b2283dcf2bfd4316e"`;

exports[`Invoice should throw if updating transaction with a different amount 1`] = `"Invoice \\"2FupTEd3PDF7HVxNrzNqQGGoWZA4rqiphq\\" existing transaction \\"xxx\\" amount of 1 is different from the new amount of 2, this should not happen"`;
